# tahoe-x1

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  MIGRATION.md  PYPI_RELEASE.md  README.md  README_NEW.md  pyproject.toml  setup.py
.github/: CODEOWNERS  COMMIT_CONVENTIONS.md  RELEASE.md
.github/workflows/: conventional-commits.yml  pre-commit.yml  release-please.yml
.pre-commit/: FILE_HEADER
configs/: predict.yaml  test_run.yaml
configs/gcloud/: README.md  job-spec.yml  launch_run.sh  provisioning-request.yaml  setup_node.sh  tahoex-1_3b-merged.yaml  tahoex-70m-merged.yaml
configs/mcli/: README.md  tahoe_x1-3b-v2-cont-train.yaml  tahoe_x1-3b-v2.yaml  tahoe_x1-70m-merged.yaml  tahoex-3b-v2.yaml
configs/runai/: runai_submit.sh
envs/: composer_env.yml  environment.yml  mosaicfm_env.yml
examples/: pretrain.py  pretrain_composer.py  pretrain_composer_flash_v2.py  pretrain_demo.sh
gcloud/: README.md  job-spec.yml  launch_run.sh  mosaicfm-1_3b-merged.yaml  mosaicfm-70m-merged.yaml  provisioning-request.yaml  setup_node.sh  tahoex-1_3b-merged.yaml  tahoex-70m-merged.yaml
mcli/: README.md  mosaicfm-3b-v2-cont-train.yaml  mosaicfm-3b-v2.yaml  mosaicfm-70m-cell-classification.yaml  mosaicfm-70m-cellxgene.yaml  mosaicfm-70m-marginal-essen.yaml  mosaicfm-70m-merged-flash.yaml  mosaicfm-70m-merged.yaml  mosaicfm-70m-rxrx-known-rels.yaml  mosaicfm-70m-tahoe.yaml  mosaicfm-70m-v2.yaml  runai_submit.sh  scgpt-1_3b-debug.yaml  scgpt-1_3b-high-lr-train.yaml  scgpt-1_3b-train.yaml  scgpt-1b-train.yaml  scgpt-50m-train.yaml  scgpt-70m-fix-norm-apr24-data.yaml  scgpt-70m-fix-norm-legacy-data.yaml  scgpt-70m-fix-norm.yaml  tahoex-3b-v2-cont-train.yaml  tahoex-3b-v2.yaml  tahoex-70m-merged.yaml
mosaicfm/: __init__.py  loss.py
mosaicfm/data/: __init__.py  collator.py  dataloader.py
mosaicfm/model/: __init__.py  blocks.py  model.py
mosaicfm/tasks/: __init__.py  cell_classification.py  cell_emb.py  emb_extractor.py  marginal_essentiality.py  rxrx_known_rels.py
mosaicfm/tokenizer/: __init__.py  default_census_vocab.json  default_gene_vocab.json  gene_tokenizer.py
mosaicfm/utils/: __init__.py  util.py
notebooks/: README.md
notebooks/adamson/: vevo_adamson_attn.ipynb  vevo_adamson_gene_emb.ipynb  vevo_adamson_mask.ipynb  vevo_adamson_mask.py  vevo_adamson_mask_null.py
notebooks/norman/: vevo_norman_gene_emb.ipynb  vevo_norman_gene_mask.ipynb  vevo_norman_mask.py
notebooks/tahoe/: tahoe_filter_count.py  vevo_tahoe_wilcoxon_filter_count.ipynb  vevo_tahoe_wilcoxon_filter_hvg_attn.ipynb  vevo_tahoe_wilcoxon_filter_protein_coding.ipynb  vevo_tahoe_wilcoxon_hvg.ipynb
runai/: mosaicfm-70m-merged-cell-classification.yaml  mosaicfm-70m-merged-flash-chem.yaml  mosaicfm-70m-merged-marginal-essentiality.yaml  mosaicfm-70m-merged.yaml  mosaicfm-70m-rxrx-known-rels.yaml  mosaicfm-70m-tahoe.yaml  scgpt-50m-train.yaml
runai/config_perts/: runai_finetune_70m_norman_1536.yaml  runai_finetune_70m_norman_full_length.yaml  runai_finetune_70m_norman_full_length_freeze.yaml  runai_finetune_70m_norman_full_length_rand_weigth.yaml  runai_finetune_70m_norman_full_length_rand_weigth_freeze.yaml
runai/cont_training/: mosaicfm-70m-final-run-gene-cont-train-concat-gene-emb.yaml  mosaicfm-70m-final-run-wo-gene-cont-train-logpred.yaml  mosaicfm-70m-final-run-wo-gene-cont-train.yaml
scgpt/: __init__.py  data_collator.py  loss.py
scgpt/data/: __init__.py  collator.py  dataloader.py
scgpt/model/: __init__.py  blocks.py  flash_layers.py  model.py
scgpt/scbank/: databank.py
scgpt/tasks/: __init__.py  cell_emb.py  emb_extractor.py
scgpt/tokenizer/: __init__.py  default_census_vocab.json  gene_tokenizer.py
scgpt/utils/: __init__.py  util.py
scripts/: clustering_tutorial.ipynb  clustering_tutotiral.ipynb  concatenate_datasets.py  download_cellxgene.py  generate_mds.py  get_embeddings.py  get_msigdb_embs.py  make_dataset.py  prepare_for_inference.py  train.py  training_tutorial.ipynb
scripts/data_prep/: README.md  concatenate_datasets.py  download_cellxgene.py  generate_fingerprints.py  generate_mds.py  generate_mds_perturbseq.py  make_dataset.py  make_hf_dataset.py  process_mosaic_sensitivity.py  process_perturbseq.py  split_dataset.py  tahoe_100m.yaml  update_vocabulary.py
scripts/depmap/: README.md  data.md  evaluate-models-example.yaml  evaluate-models.ipynb  evaluate-models.py  generate-embs-model.py  generate-embs-pca.py  generate-nulls.py  generate-prereqs.py  other-models.md  rf-cl-specific-task-1of3.sh  rf-cl-specific-task-2of3.sh  rf-cl-specific-task-3of3.sh  rf-marginal-task.sh  rf.py  utils.py
scripts/drug-embedding/: generate_fps.ipynb
scripts/inference/: README.md  predict_embeddings.py  prepare_for_inference.py  save_embeddings.py  tahoe_100m.yaml  test_get_batch.py
scripts/msigdb/: README.md  benchmark_mlp.py  benchmark_utils.py  build_anndata.py  config.yaml  data.py  embedding.py  environment.yml  generate_anndata.py  generate_embeddings.py  get_msigdb_embs.py  parse_embeddings.py  plot_reps.ipynb  run_benchmark.py  run_benchmark_reps.sh  run_benchmark_reps_per_gene_set.sh  run_benchmarks.py  sig_predictor.py  visualize_results.py  viz_configs.ipynb
scripts/perturbation/: README.md  finetune.py  perturb_callback.py  prepare_data.py
scripts/state transition/: README.md  adapt_parse_state_tx_20250908_hvg.sh  adapt_parse_state_tx_20250908_se.sh  adapt_parse_state_tx_20250918_Tx1-3b_parse_hvg_v3_embs.sh  train_tahoe_state_tx_20250812_hvg.sh  train_tahoe_state_tx_20250812_mfm.sh  train_tahoe_state_tx_20250812_mfm_3b.sh  train_tahoe_state_tx_20250812_se.sh  train_tahoe_state_tx_20250826_zeroshot_hvg.sh  train_tahoe_state_tx_20250826_zeroshot_mfm_3b.sh  (+1 more)
tahoe_x1/: __init__.py
tahoex/: __init__.py  _version.py
tests/: __init__.py  test_encoder.py  test_flash_layers.py  test_scripts.py  test_tokenizer.py  vocab.json
tutorials/: Tutorial_cell_emb_vevo.ipynb  Tutorial_gene_emb_vevo.ipynb  cell_clustering_benchmark.ipynb  clustering_tutorial.ipynb  training_tutorial.ipynb
(+49 files in other folders)
