# =============================================================================
# PROJECT METADATA & DEPENDENCIES
# =============================================================================

[build-system]
requires = ["setuptools<68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tahoex"
version = "0.1.2"
description = "Tahoe-x1: Perturbation trained virtual cell models from Tahoe Therapeutics"
readme = "README.md"
authors = [
    { name = "Vevo Therapeutics" },
]
requires-python = ">=3.10"
license = { text = "Proprietary" }

dependencies = [
    "awscli>=1.32",
    "llm-foundry[gpu]==0.17.1",
    "mosaicml-streaming",
    "ninja",
    "cmake",
    "packaging",
    "torch==2.5.*",
    "llvmlite",
    "numba",
    "natsort",
    "scanpy",
    "pynndescent",
    "umap-learn",
    "anndata",
    "h5py",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.4.0,<4",
    "toml>=0.10.2,<0.11",
    "ipykernel",
    "packaging>=21,<23",
]


all = [
    "tahoex[dev]",
]

[tool.setuptools.packages.find]
exclude = [
    ".github*",
    "envs*",
    "tutorials*",
    "tests*",
    "scripts*",
    "mcli*",
    "runai*",
]

[tool.setuptools.package-data]
tahoex = ["py.typed"]

# =============================================================================
# TOOL CONFIGURATIONS
# =============================================================================

[tool.isort]
profile = "black"
skip = ["env", "wandb", "runs", "build", "node_modules"]

[tool.black]
line-length = 88

[tool.ruff.lint]
select = [
    "C4",
    "LOG",
    "PERF",
    "PL",
    "E",
    "F",
    "COM812",
    "SIM",
    "RUF",
    "ERA",
]
ignore = [
    "PLR0913", # Too many arguments in function
    "PLR0915", # Too many statements
    "PLR0912", # Too many branches
    "PERF401", # Enforces list comprehensions over for-loops
    "E501", # Line too long
    "E402", # Module level import not at top of file
    "LOG015", # Log.info on root logger
    "SIM401", # Use .get method for dictionary like
]

[tool.ruff]
exclude = [
    "build/**",
    "docs/**",
    "node_modules/**",
    "*.ipynb"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Coverage
[tool.coverage.run]
parallel = true
branch = true
relative_files = true
concurrency = ["thread"]
include = [
    "tahoex/*"
]

# Pyright
[tool.pyright]
exclude = ['env-**', 'venv*', '.venv']
stubPath = ""  # suppress useless 'stubPath is not a valid directory' errors

reportUnnecessaryIsInstance = "none" # it is ok to do this for clarity or safety
reportMissingTypeStubs = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "error"
reportUnusedImport = "none"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportWildcardImportFromLibrary = "error"
reportUntypedFunctionDecorator = "warning"
reportPrivateImportUsage = "none"
reportUndefinedVariable = "error"
strictParameterNoneValue = true
reportPropertyTypeMismatch = "error"
reportUntypedNamedTuple = "error"
reportUnnecessaryCast = "error"
reportInvalidTypeVarUse = "error"
reportOverlappingOverload = "error"
reportUninitializedInstanceVariable = "error"
reportInvalidStringEscapeSequence = "error"
reportMissingParameterType = "error"
reportCallInDefaultInitializer = "error"
reportUnnecessaryComparison = "error"
reportSelfClsParameterName = "error"
reportImplicitStringConcatenation = "warning"
reportInvalidStubStatement = "error"
reportIncompleteStub = "error"
reportUnsupportedDunderAll = "error"
reportUnusedCoroutine = "error"
reportMissingImports = "none"

# Pytest
[tool.pytest.ini_options]
# By default, skip gpu tests
addopts = "--tb=short -m 'not gpu'"

markers = [
    # For distributed testing
    "world_size(val)",
    # Should be run during daily regression
    "daily",
    # Whether the test will be reading data from a remote source, and may require credentials
    "remote",
    # whether the test requires a gpu
    "gpu",
]

filterwarnings = [
    # "error",  # warnings should be treated like errors, but still need to fix some warnings
    'ignore:ExtraArgumentWarning',  # extra arguments originate from pytest-specific CLI args
    'ignore:DistributedDefaultValueWarning',  # default distributed values are fine
    'ignore:NoDistributedWarning',  # running without distributed is fine
    'ignore:Deterministic mode is activated:UserWarning',  # all tests run with deterministic mode
    'ignore:SubsetNumBatchesWarning',  # different subsets OK for testing
    'ignore:No optimizer:UserWarning',  # testing defaults
    'ignore:No scheduler:UserWarning',  # testing defaults
    'ignore::DeprecationWarning:tensorboard',  # ignore tensorboard
]

[tool.pydocstyle]
convention = "google"
add_ignore = "D100,D101,D102,D103,D104,D105,D107,D400,D401,D415"
add_select = "D404"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }